fixed spacing with mentors

--- a/block09style.css
+++ b/block09style.css
@@ -26,7 +26,6 @@
     padding: 1px 20px;
     border: 2px black solid;
     float: left;
-    margin: 30px;
 }
 
 .float_right {
